--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp \n",
+    "# default_exp datasets\n",
     "from nbdev.showdoc import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -33,11 +33,11 @@
    "source": [
     "# export\n",
     "import matplotlib.pyplot as plt\n",
-    "def plot_directed_2d(X, flows, labels, mask_prob=0.5):\n",
+    "def plot_directed_2d(X, flows, labels, mask_prob=0.5, cmap=\"viridis\"):\n",
     "  num_nodes = X.shape[0]\n",
     "  fig = plt.figure()\n",
     "  ax = fig.add_subplot()\n",
-    "  ax.scatter(X[:,0], X[:,1], marker=\".\", c=labels)\n",
+    "  ax.scatter(X[:,0], X[:,1], marker=\".\", c=labels, cmap=cmap)\n",
     "  mask = np.random.rand(num_nodes) > mask_prob\n",
     "  ax.quiver(X[mask,0], X[mask,1], flows[mask,0], flows[mask,1], alpha=0.1)\n",
     "  ax.set_aspect(\"equal\")\n",
@@ -51,20 +51,20 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def plot_origin_3d(ax, lim):\n",
-    "  ax.plot(lim,[0,0],[0,0], color=\"k\", alpha=0.5)\n",
-    "  ax.plot([0,0],lim,[0,0], color=\"k\", alpha=0.5)\n",
-    "  ax.plot([0,0],[0,0],lim, color=\"k\", alpha=0.5)\n",
+    "def plot_origin_3d(ax, xlim, ylim, zlim):\n",
+    "  ax.plot(xlim,[0,0],[0,0], color=\"k\", alpha=0.5)\n",
+    "  ax.plot([0,0],ylim,[0,0], color=\"k\", alpha=0.5)\n",
+    "  ax.plot([0,0],[0,0],zlim, color=\"k\", alpha=0.5)\n",
     "\n",
-    "def plot_directed_3d(X, flows, labels, mask_prob=0.5):\n",
+    "def plot_directed_3d(X, flow, labels, mask_prob=0.5, cmap=\"virdis\", origin=False):\n",
     "  num_nodes = X.shape[0]\n",
-    "  colors = plt.cm.viridis(labels/(2*np.pi))\n",
     "  mask = np.random.rand(num_nodes) > mask_prob\n",
     "  fig = plt.figure()\n",
-    "  ax = fig.add_subplot(projection='3d')\n",
-    "  plot_origin_3d(ax, lim=[-1,1])\n",
-    "  ax.scatter(X[:,0], X[:,1], X[:,2], marker=\".\", c=labels)\n",
-    "  ax.quiver(X[mask,0], X[mask,1], X[mask,2], flows[mask,0], flows[mask,1], flows[mask,2], alpha=0.1, length=0.5)\n",
+    "  ax = fig.add_subplot(projection=\"3d\")\n",
+    "  if origin:\n",
+    "    plot_origin_3d(ax, xlim=[X[:,0].min(),X[:,0].max()], ylim=[X[:,1].min(),X[:,1].max()], zlim=[X[:,2].min(),X[:,2].max()])\n",
+    "  ax.scatter(X[:,0], X[:,1], X[:,2], marker=\".\", c=labels, cmap=cmap)\n",
+    "  ax.quiver(X[mask,0], X[mask,1], X[mask,2], flow[mask,0], flow[mask,1], flow[mask,2], alpha=0.1, length=0.5)\n",
     "  plt.show()"
    ]
   },
@@ -83,13 +83,10 @@
    "source": [
     "#export\n",
     "# For plotting 2D and 3D graphs\n",
-    "import plotly\n",
-    "import plotly.graph_objs as go\n",
     "import plotly.express as px\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits import mplot3d\n",
     "\n",
     "def plot_3d(X,distribution=None, title=\"\",lim=None,use_plotly=False,colorbar = False, cmap=\"plasma\"):\n",
     "    if distribution is None:\n",
