--- a/01a01 Graph Toy Datasets.ipynb
+++ b/01a01 Graph Toy Datasets.ipynb
@@ -1,6 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Graph Toy Datasets\n",
+    "> Interesting Adjacency Matrices for test embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default_exp datasets\n",
+    "from nbdev.showdoc import *\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import FlowNet\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FlowNet is, at heart, an embedder of directed graphs. But what types of graphs? This notebook, and those nested under 01a01, contain a battery of toy directed graphs, including:\n",
+    "1. (Directed) Stochastic Block Models\n",
+    "2. Trees\n",
+    "\n",
+    "This notebook houses a sampling of these graphs, with details on how to call them and visualize them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,7 +51,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
