Added Polar 1-manifold toy datasets

--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -83,7 +83,7 @@
     "    ax.plot([0, 0], [0, 0], zlim, color=\"k\", alpha=0.5)\n",
     "\n",
     "\n",
-    "def plot_directed_3d(X, flow, labels, mask_prob=0.5, cmap=\"virdis\", origin=False):\n",
+    "def plot_directed_3d(X, flow, labels, mask_prob=0.5, cmap=\"viridis\", origin=False):\n",
     "    num_nodes = X.shape[0]\n",
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
     "    fig = plt.figure()\n",
