Added polar 2-manifold toy datasets

--- a/01a02a Polar 1-Manifold Toy Datasets.ipynb
+++ b/01a02a Polar 1-Manifold Toy Datasets.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1-Manifold Toy Datasets\n",
+    "# Polar 1-Manifold Toy Datasets\n",
     "\n",
-    "> Collections of 1-Manifold toy datasets in 3 dimensional space"
+    "> Collections of 1-Manifold toy datasets in 3 dimensional space generated from polar equations"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_circle(num_nodes=500, radius=1, xtilt=0, ytilt=0, sigma=0):\n",
+    "def directed_circle(num_nodes=500, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
     "    # sample random angles between 0 and 2pi\n",
     "    thetas = np.random.uniform(0, 2*np.pi, num_nodes)\n",
     "    thetas = np.sort(thetas)\n",
@@ -114,11 +114,12 @@
     "    u = np.cos(alphas)\n",
     "    v = np.sin(alphas)\n",
     "    w = np.zeros(num_nodes)\n",
-    "    flow = np.column_stack((u, v, w))\n",
+    "    flows = np.column_stack((u, v, w))\n",
+    "    flows = -flows if inverse else flows\n",
     "    # tilt and add noise\n",
-    "    X, flow = xy_tilt(X, flow, xtilt=xtilt, ytilt=ytilt)\n",
+    "    X, flows = xy_tilt(X, flows, xtilt, ytilt)\n",
     "    X = add_noise(X, sigma)\n",
-    "    return X, flow, labels"
+    "    return X, flows, labels"
    ]
   },
   {
@@ -183,7 +184,7 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_spiral(num_nodes=500, num_spirals=1.5, inwards=False, radius=1, xtilt=0, ytilt=0, sigma=0):\n",
+    "def directed_spiral(num_nodes=500, num_spirals=1.5, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
     "    # sample random angles between 0 and num_spirals * 2pi\n",
     "    thetas = np.random.uniform(0, num_spirals*2*np.pi, num_nodes)\n",
     "    thetas = np.sort(thetas)\n",
@@ -200,7 +201,7 @@
     "    v = np.sin(alphas) * thetas\n",
     "    w = np.zeros(num_nodes)\n",
     "    flows = np.column_stack((u, v, w))\n",
-    "    flows = -flows if inwards else flows\n",
+    "    flows = -flows if inverse else flows\n",
     "    # tilt and add noise\n",
     "    X, flows = xy_tilt(X, flows, xtilt, ytilt)\n",
     "    X = add_noise(X, sigma)\n",
@@ -269,7 +270,7 @@
    "outputs": [],
    "source": [
     "# export \n",
-    "def directed_spiral_uniform(num_nodes=500, num_spirals=1.5, inwards=False, radius=1, xtilt=0, ytilt=0, sigma=0):\n",
+    "def directed_spiral_uniform(num_nodes=500, num_spirals=1.5, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
     "    # sample random angles between 0 and num_spirals * 2pi\n",
     "    t1 = np.random.uniform(0, num_spirals*2*np.pi, num_nodes)\n",
     "    t2 = np.random.uniform(0, num_spirals*2*np.pi, num_nodes)\n",
@@ -288,7 +289,7 @@
     "    v = np.sin(alphas)\n",
     "    w = np.zeros(num_nodes)\n",
     "    flows = np.column_stack((u, v, w))\n",
-    "    flows = -flows if inwards else flows\n",
+    "    flows = -flows if inverse else flows\n",
     "    # tilt and add noise\n",
     "    X, flows = xy_tilt(X, flows, xtilt, ytilt)\n",
     "    X = add_noise(X, sigma)\n",
@@ -357,7 +358,7 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_spiral_sklearn(num_nodes=500, num_spirals=1.5, inwards=False, radius=1, xtilt=0, ytilt=0, sigma=0):\n",
+    "def directed_spiral_sklearn(num_nodes=500, num_spirals=1.5, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
     "    # sample random angles between 0 and num_spirals * 2pi\n",
     "    thetas = np.random.uniform(num_spirals*np.pi, num_spirals*3*np.pi, num_nodes)\n",
     "    thetas = np.sort(thetas)\n",
@@ -374,7 +375,7 @@
     "    v = np.sin(alphas) * thetas\n",
     "    w = np.zeros(num_nodes)\n",
     "    flows = np.column_stack((u, v, w))\n",
-    "    flows = -flows if inwards else flows\n",
+    "    flows = -flows if inverse else flows\n",
     "    # tilt and add noise\n",
     "    X, flows = xy_tilt(X, flows, xtilt, ytilt)\n",
     "    X = add_noise(X, sigma)\n",
