--- a/02a Flashlight Kernel.ipynb
+++ b/02a Flashlight Kernel.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# default_exp data_processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,10 +106,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00 Core.ipynb.\n",
+      "Converted 01 Datasets.ipynb.\n",
+      "Converted 01a01 Graph Toy Datasets.ipynb.\n",
+      "Converted 01a01a Small Random Directed Graphs.ipynb.\n",
+      "Converted 01a02 Manifold Toy Datasets.ipynb.\n",
+      "Converted 01a02a Polar 1-Manifold Toy Datasets.ipynb.\n",
+      "Converted 01b01 Synthetic Single-Cell Data.ipynb.\n",
+      "Converted 01b02 Single-Cell Data and RNA Velocity.ipynb.\n",
+      "Converted 01c Plotting Utils.ipynb.\n",
+      "Converted 02 Data Preprocessing.ipynb.\n",
+      "Converted 02a Flashlight Kernel.ipynb.\n",
+      "Converted 02b Diffusion Maps.ipynb.\n",
+      "Converted 02c Flow Neighborhoods.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nbdev_build_lib"
+   ]
   }
  ],
  "metadata": {
