--- a/02a Flashlight Kernel.ipynb
+++ b/02a Flashlight Kernel.ipynb
@@ -22,6 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "def affinity_from_flow(flow, directions_array, flow_strength = 1, sigma=1):\n",
     "    \"\"\"Compute probabilities of transition in the given directions based on the flow. \n",
     "\n",
@@ -71,6 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "def affinity_matrix_from_pointset_to_pointset(pointset1, pointset2, flow,n_neighbors=None,sigma=0.5, flow_strength=1):\n",
     "    \"\"\"Compute affinity matrix between the points of pointset1 and pointset2, using the provided flow.\n",
     "\n",
@@ -119,6 +123,7 @@
       "Converted 01a01a Small Random Directed Graphs.ipynb.\n",
       "Converted 01a02 Manifold Toy Datasets.ipynb.\n",
       "Converted 01a02a Polar 1-Manifold Toy Datasets.ipynb.\n",
+      "Converted 01a02b Polar 2-Manifold Toy Datasets.ipynb.\n",
       "Converted 01b01 Synthetic Single-Cell Data.ipynb.\n",
       "Converted 01b02 Single-Cell Data and RNA Velocity.ipynb.\n",
       "Converted 01c Plotting Utils.ipynb.\n",
