Finished all graph datasets
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -212,11 +212,11 @@
     "from torch_geometric.utils import to_dense_adj\n",
     "\n",
     "\n",
-    "def visualize_heatmap(edge_index, order_ind=None):\n",
+    "def visualize_heatmap(edge_index, order_ind=None, cmap = \"copper\"):\n",
     "    dense_adj = to_dense_adj(edge_index)[0]\n",
     "    if order_ind is not None:\n",
     "        dense_adj = dense_adj[order_ind, :][:, order_ind]\n",
-    "    plt.imshow(dense_adj, cmap=\"copper\")\n",
+    "    plt.imshow(dense_adj, cmap=cmap)\n",
     "    plt.show()\n"
    ]
   },
