--- a/02a Flashlight Kernel.ipynb
+++ b/02a Flashlight Kernel.ipynb
@@ -9,21 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp data_processing"
+    "# default_exp data_processing\n",
+    "# hide\n",
+    "from nbdev.showdoc import *\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import FlowNet\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
-    "\n",
+    "import torch.nn.functional as F\n",
     "def affinity_from_flow(flow, directions_array, flow_strength = 1, sigma=1):\n",
     "    \"\"\"Compute probabilities of transition in the given directions based on the flow. \n",
     "\n",
@@ -47,7 +56,7 @@
     "    # Calculate flow lengths, used to scale directions to flow\n",
     "    # flow_lengths = torch.linalg.norm(flow,dim=-1)\n",
     "    if len(directions_array) == 1: # convert to 2d array if necessary\n",
-    "      directions_array = directions_array[:,None] \n",
+    "        directions_array = directions_array[:,None] \n",
     "    # scale directions to have same norm as flow\n",
     "    # scaled_directions = normed_directions * flow_lengths[:,None].repeat(directions_array.shape[0],1,directions_array.shape[2])\n",
     "    # compute dot products as matrix multiplication\n",
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,61 +116,13 @@
     "    \n",
     "    return affinities"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00 Core.ipynb.\n",
-      "Converted 01 Datasets.ipynb.\n",
-      "Converted 01a01 Graph Toy Datasets.ipynb.\n",
-      "Converted 01a01a Small Random Directed Graphs.ipynb.\n",
-      "Converted 01a02 Manifold Toy Datasets.ipynb.\n",
-      "Converted 01a02a Polar 1-Manifold Toy Datasets.ipynb.\n",
-      "Converted 01a02b Polar 2-Manifold Toy Datasets.ipynb.\n",
-      "Converted 01b01 Synthetic Single-Cell Data.ipynb.\n",
-      "Converted 01b02 Single-Cell Data and RNA Velocity.ipynb.\n",
-      "Converted 01c Plotting Utils.ipynb.\n",
-      "Converted 02 Data Preprocessing.ipynb.\n",
-      "Converted 02a Flashlight Kernel.ipynb.\n",
-      "Converted 02b Diffusion Maps.ipynb.\n",
-      "Converted 02c Flow Neighborhoods.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!nbdev_build_lib"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "c6ea889a79d04ae11c3321f85d882527bc3513ce7270df83ac3996bcf1545016"
-   }
   }
  },
  "nbformat": 4,
