Added sphere and torus with flows

--- a/01a02b Polar 2-Manifold Toy Datasets.ipynb
+++ b/01a02b Polar 2-Manifold Toy Datasets.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_cylinder(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_swiss_roll(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_swiss_roll_uniform(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
@@ -228,7 +228,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_swiss_roll_sklearn(xtilt=0, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
