--- a/01a02c Function 1-Manifold Toy Datasets.ipynb
+++ b/01a02c Function 1-Manifold Toy Datasets.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_sinh_branch()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_sinh_branch(xtilt=np.pi/4, sigma=0.25)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_sin()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
@@ -239,7 +239,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_sin(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_sin_ribbon(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
