--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -59,13 +59,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "def plot_directed_2d(X, flows, labels, mask_prob=0.5, cmap=\"viridis\"):\n",
+    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\"):\n",
     "    num_nodes = X.shape[0]\n",
+    "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot()\n",
-    "    ax.scatter(X[:, 0], X[:, 1], marker=\".\", c=labels, cmap=cmap)\n",
+    "    ax.scatter(X[:, 0], X[:, 1], marker=\".\", c=labels, cmap=cmap, alpha=alpha_points)\n",
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
-    "    ax.quiver(X[mask, 0], X[mask, 1], flows[mask, 0], flows[mask, 1], alpha=0.1)\n",
+    "    ax.quiver(X[mask, 0], X[mask, 1], flows[mask, 0], flows[mask, 1], alpha=alpha_arrows)\n",
     "    ax.set_aspect(\"equal\")\n",
     "    plt.show()\n"
    ]
@@ -83,8 +84,9 @@
     "    ax.plot([0, 0], [0, 0], zlim, color=\"k\", alpha=0.5)\n",
     "\n",
     "\n",
-    "def plot_directed_3d(X, flow, labels, mask_prob=0.5, cmap=\"viridis\", origin=False):\n",
+    "def plot_directed_3d(X, flow, labels=None, mask_prob=0.5, cmap=\"viridis\", origin=False):\n",
     "    num_nodes = X.shape[0]\n",
+    "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot(projection=\"3d\")\n",
@@ -95,7 +97,7 @@
     "            ylim=[X[:, 1].min(), X[:, 1].max()],\n",
     "            zlim=[X[:, 2].min(), X[:, 2].max()],\n",
     "        )\n",
-    "    ax.scatter(X[:, 0], X[:, 1], X[:, 2], marker=\".\", c=labels, cmap=cmap)\n",
+    "    ax.scatter(X[:, 0], X[:, 1], X[:, 2], marker=\".\", c=labels, cmap=cmap, alpha=alpha_points)\n",
     "    ax.quiver(\n",
     "        X[mask, 0],\n",
     "        X[mask, 1],\n",
@@ -103,7 +105,7 @@
     "        flow[mask, 0],\n",
     "        flow[mask, 1],\n",
     "        flow[mask, 2],\n",
-    "        alpha=0.1,\n",
+    "        alpha=alpha_arrows,\n",
     "        length=0.5,\n",
     "    )\n",
     "    plt.show()\n"
