--- a/01a02a Polar 1-Manifold Toy Datasets.ipynb
+++ b/01a02a Polar 1-Manifold Toy Datasets.ipynb
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_circle()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_circle(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels, origin=True)"
    ]
@@ -218,7 +218,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_spiral()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_spiral(xtilt=np.pi/4, sigma=0.2)\n",
     "plot_directed_3d(X, flows, labels, origin=True)"
    ]
@@ -306,7 +306,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_spiral_uniform()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_spiral_uniform(xtilt=np.pi/4, sigma=0.2)\n",
     "plot_directed_3d(X, flows, labels, origin=True)"
    ]
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_spiral_sklearn()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
@@ -416,7 +416,7 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "# collapse\n",
     "X, flows, labels = directed_spiral_sklearn(xtilt=np.pi/4, sigma=0.2)\n",
     "plot_directed_3d(X, flows, labels, origin=True)"
    ]
