Added a dataset galary display

--- a/01a01c Directed Stochastic Block Model.ipynb
+++ b/01a01c Directed Stochastic Block Model.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp datasets\n",
+    "# default_exp graph_datasets\n",
     "from nbdev.showdoc import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
