--- a/01a02d Sphere and Torus Toy Datasets.ipynb
+++ b/01a02d Sphere and Torus Toy Datasets.ipynb
@@ -175,7 +175,7 @@
     "        X = np.vstack([[[0,-c-a,0],[0,c-a,0],[0,c,a]],X])\n",
     "\n",
     "    if noise:\n",
-    "        X += noise * np.random.randn(X.shape)\n",
+    "        X += noise * np.random.randn(*X.shape)\n",
     "    \n",
     "    if flow_type == 'whirlpool':\n",
     "        flows = whirlpool(X)\n",
