--- a/01a01a Communities Datasets.ipynb
+++ b/01a01a Communities Datasets.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "# default_exp datasets\n",
+    "# default_exp graph_datasets\n",
     "# hide\n",
     "from nbdev.showdoc import *\n",
     "from FlowNet.datasets import visualize_graph, visualize_heatmap\n",
@@ -456,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3.6.6 64-bit (system)",
    "language": "python",
    "name": "python3"
   }
