--- a/01a02c Function 1-Manifold Toy Datasets.ipynb
+++ b/01a02c Function 1-Manifold Toy Datasets.ipynb
@@ -291,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
+   "display_name": "Python 3.6.6 64-bit (system)",
    "language": "python",
    "name": "python3"
   }
