--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -59,16 +59,18 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\"):\n",
+    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\", ax=None):\n",
     "    num_nodes = X.shape[0]\n",
     "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot()\n",
+    "    if ax is None:\n",
+    "        fig = plt.figure()\n",
+    "        ax = fig.add_subplot()\n",
     "    ax.scatter(X[:, 0], X[:, 1], marker=\".\", c=labels, cmap=cmap, alpha=alpha_points)\n",
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
     "    ax.quiver(X[mask, 0], X[mask, 1], flows[mask, 0], flows[mask, 1], alpha=alpha_arrows)\n",
     "    ax.set_aspect(\"equal\")\n",
-    "    plt.show()\n"
+    "    if ax is None:\n",
+    "        plt.show()\n"
    ]
   },
   {
@@ -84,12 +86,13 @@
     "    ax.plot([0, 0], [0, 0], zlim, color=\"k\", alpha=0.5)\n",
     "\n",
     "\n",
-    "def plot_directed_3d(X, flow, labels=None, mask_prob=0.5, cmap=\"viridis\", origin=False):\n",
+    "def plot_directed_3d(X, flow, labels=None, mask_prob=0.5, cmap=\"viridis\", origin=False, ax=None):\n",
     "    num_nodes = X.shape[0]\n",
     "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(projection=\"3d\")\n",
+    "    if ax is None:\n",
+    "        fig = plt.figure()\n",
+    "        ax = fig.add_subplot(projection=\"3d\")\n",
     "    if origin:\n",
     "        plot_origin_3d(\n",
     "            ax,\n",
@@ -108,7 +111,8 @@
     "        alpha=alpha_arrows,\n",
     "        length=0.5,\n",
     "    )\n",
-    "    plt.show()\n"
+    "    if ax is None:\n",
+    "        plt.show()\n"
    ]
   },
   {
