--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -181,6 +181,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can display a galary of manifold with flow using the `display_flow_galary` function below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "import matplotlib.pyplot as plt\n",
+    "def display_flow_galary(func_set, ncol=4):\n",
+    "    nfunc = len(func_set)\n",
+    "    ncol = 4\n",
+    "    nrow = int(np.ceil(nfunc/ncol))\n",
+    "    fig = plt.figure(figsize=(4*ncol, 3*nrow))\n",
+    "    for i, func in enumerate(func_set):\n",
+    "        name, call = func\n",
+    "        ax = fig.add_subplot(nrow, ncol, i+1, projection=\"3d\")\n",
+    "        X, flows, labels = call()\n",
+    "        plot_directed_3d(X, flows, labels, mask_prob=0.5, ax=ax)\n",
+    "        ax.set_title(name, y=1.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Graph Plotting\n",
     "\n",
     "Functions to visualize (small) graphs, directed and undirected."
