--- a/01a01c Directed Stochastic Block Model.ipynb
+++ b/01a01c Directed Stochastic Block Model.ipynb
@@ -554,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3.6.6 64-bit (system)",
    "language": "python",
    "name": "python3"
   }
