Added flow neighborhood

--- a/01a02 Manifold Toy Datasets.ipynb
+++ b/01a02 Manifold Toy Datasets.ipynb
@@ -38,7 +38,7 @@
     "    display_flow_galary,\n",
     "    directed_circle, directed_spiral, directed_spiral_uniform, directed_spiral_sklearn,\n",
     "    directed_cylinder, directed_swiss_roll, directed_swiss_roll_uniform, directed_swiss_roll_sklearn,\n",
-    "    directed_sin, directed_sin_ribbon, directed_sinh_branch, directed_moons,\n",
+    "    directed_sin, directed_sin_ribbon, directed_sinh_branch, directed_sin_moons,\n",
     "    directed_torus, directed_sphere\n",
     ")"
    ]
@@ -75,7 +75,7 @@
     "    (\"Sin\"                  , lambda: directed_sin(xtilt=np.pi/4, sigma=0.2),           ),\n",
     "    (\"Sin ribbon\"           , lambda: directed_sin_ribbon(sigma=0.2),                   ),\n",
     "    (\"Sinh branch\"          , lambda: directed_sinh_branch(xtilt=np.pi/4, sigma=0.2),   ),\n",
-    "    (\"Sin moons\"                , lambda: directed_sin_moons(xtilt=np.pi/4, sigma=0.1),   ),\n",
+    "    (\"Sin moons\"            , lambda: directed_sin_moons(xtilt=np.pi/4, sigma=0.1),     ),\n",
     "    (\"Torus\"                , lambda: directed_torus(noise=0.1),                        ),\n",
     "    (\"Sphere\"               , lambda: directed_sphere(noise=0.1)                        )\n",
     "]\n",
