--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -226,8 +226,8 @@
     "from torch_geometric.utils import to_networkx\n",
     "\n",
     "\n",
-    "def visualize_graph(data):\n",
-    "    G = to_networkx(data, to_undirected=False)\n",
+    "def visualize_graph(data, is_networkx=False, to_undirected=False):\n",
+    "    G = data if is_networkx else to_networkx(data, to_undirected=to_undirected)\n",
     "    nx.draw_networkx(\n",
     "        G, pos=nx.spring_layout(G, seed=42), arrowsize=20, node_color=\"#adade0\"\n",
     "    )\n",
@@ -246,12 +246,22 @@
     "from torch_geometric.utils import to_dense_adj\n",
     "\n",
     "\n",
-    "def visualize_heatmap(edge_index, order_ind=None, cmap = \"copper\"):\n",
+    "def visualize_heatmap(edge_index, order_ind=None, cmap = \"copper\", ax=None):\n",
     "    dense_adj = to_dense_adj(edge_index)[0]\n",
     "    if order_ind is not None:\n",
     "        dense_adj = dense_adj[order_ind, :][:, order_ind]\n",
-    "    plt.imshow(dense_adj, cmap=cmap)\n",
-    "    plt.show()\n"
+    "    if ax is not None:\n",
+    "        ax.imshow(dense_adj, cmap=cmap)\n",
+    "    else:\n",
+    "        plt.imshow(dense_adj, cmap=cmap)\n",
+    "        plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also make a version of `visualize_heatmap` that doesn't rely on torch geometric."
    ]
   },
   {
@@ -259,7 +269,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# export\n",
+    "def visualize_edge_index(edge_index, order_ind=None, cmap = \"copper\", ax=None):\n",
+    "    num_nodes = edge_index.max() + 1\n",
+    "    row, col = edge_index\n",
+    "    dense_adj = np.zeros((num_nodes, num_nodes))\n",
+    "    for r, c in zip(row, col):\n",
+    "        dense_adj[r,c] = 1\n",
+    "    if order_ind is not None:\n",
+    "        dense_adj = dense_adj[order_ind, :][:, order_ind]\n",
+    "    if ax is not None:\n",
+    "        ax.imshow(dense_adj, cmap=cmap)\n",
+    "    else:\n",
+    "        plt.imshow(dense_adj, cmap=cmap)\n",
+    "        plt.show()"
+   ]
   }
  ],
  "metadata": {
