--- a/02a Flashlight Kernel.ipynb
+++ b/02a Flashlight Kernel.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "# export\n",
+    "import torch\n",
     "import torch.nn.functional as F\n",
     "def affinity_from_flow(flow, directions_array, flow_strength = 1, sigma=1):\n",
     "    \"\"\"Compute probabilities of transition in the given directions based on the flow. \n",
