Added flow neighbors

--- a/01a02a Polar 1-Manifold Toy Datasets.ipynb
+++ b/01a02a Polar 1-Manifold Toy Datasets.ipynb
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sklearn Spirals"
+    "## delayed Spirals"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_spiral_sklearn(num_nodes=500, num_spirals=1.5, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
+    "def directed_spiral_delayed(num_nodes=500, num_spirals=1.5, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
     "    # sample random angles between 0 and num_spirals * 2pi\n",
     "    thetas = np.random.uniform(num_spirals*np.pi, num_spirals*3*np.pi, num_nodes)\n",
     "    thetas = np.sort(thetas)\n",
@@ -406,7 +406,7 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_spiral_sklearn()\n",
+    "X, flows, labels = directed_spiral_delayed()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
   },
@@ -430,14 +430,14 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_spiral_sklearn(xtilt=np.pi/4, sigma=0.2)\n",
+    "X, flows, labels = directed_spiral_delayed(xtilt=np.pi/4, sigma=0.2)\n",
     "plot_directed_3d(X, flows, labels, origin=True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.6 64-bit (system)",
+   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
    "language": "python",
    "name": "python3"
   }
