--- a/01a02b Polar 2-Manifold Toy Datasets.ipynb
+++ b/01a02b Polar 2-Manifold Toy Datasets.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "from FlowNet.datasets import plot_directed_3d, directed_circle, directed_spiral, directed_spiral_uniform, directed_spiral_sklearn"
+    "from FlowNet.datasets import plot_directed_3d, directed_circle, directed_spiral, directed_spiral_uniform, directed_spiral_delayed"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sklearn Spirals"
+    "## delayed Spirals"
    ]
   },
   {
@@ -203,8 +203,8 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_swiss_roll_sklearn(num_nodes=1000, num_spirals=1.5, height=20, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
-    "    X, flows, labels = directed_spiral_sklearn(num_nodes, num_spirals, radius, xtilt, ytilt, sigma, inverse)\n",
+    "def directed_swiss_roll_delayed(num_nodes=1000, num_spirals=1.5, height=20, radius=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
+    "    X, flows, labels = directed_spiral_delayed(num_nodes, num_spirals, radius, xtilt, ytilt, sigma, inverse)\n",
     "    X = generate_prism(num_nodes, X, height)\n",
     "    return X, flows, labels"
    ]
@@ -229,7 +229,7 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_swiss_roll_sklearn(xtilt=0, sigma=0.1)\n",
+    "X, flows, labels = directed_swiss_roll_delayed(xtilt=0, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
   }
