--- a/01a02c Function 1-Manifold Toy Datasets.ipynb
+++ b/01a02c Function 1-Manifold Toy Datasets.ipynb
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_sin(num_nodes=500, xscale=1, yscale=1, xlow=-2*np.pi, xhigh=2*np.pi, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
+    "def directed_sine(num_nodes=500, xscale=1, yscale=1, xlow=-2*np.pi, xhigh=2*np.pi, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
     "    X, flows, labels = directed_one_variable_function(\n",
     "        lambda x: np.sin(x / xscale) * yscale, \n",
     "        lambda x: np.cos(x / xscale) / xscale * yscale, \n",
@@ -115,7 +115,7 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_sin()\n",
+    "X, flows, labels = directed_sine()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
   },
@@ -139,7 +139,7 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_sin(xtilt=np.pi/4, sigma=0.1)\n",
+    "X, flows, labels = directed_sine(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
   },
@@ -157,8 +157,8 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_sin_ribbon(num_nodes=1000, xscale=1, yscale=1, xlow=-2*np.pi, xhigh=2*np.pi, height=20, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
-    "    X, flows, labels = directed_sin(num_nodes, xscale, yscale, xlow, xhigh, xtilt, ytilt, sigma, inverse)\n",
+    "def directed_sine_ribbon(num_nodes=1000, xscale=1, yscale=1, xlow=-2*np.pi, xhigh=2*np.pi, height=20, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
+    "    X, flows, labels = directed_sine(num_nodes, xscale, yscale, xlow, xhigh, xtilt, ytilt, sigma, inverse)\n",
     "    X = generate_prism(num_nodes, X, height)\n",
     "    return X, flows, labels"
    ]
@@ -183,7 +183,7 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_sin_ribbon(xtilt=np.pi/4, sigma=0.1)\n",
+    "X, flows, labels = directed_sine_ribbon(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
   },
@@ -222,7 +222,7 @@
     "    num_nodes_per_branch = num_nodes//3\n",
     "    X_root, flows_root, labels_root = directed_sinh(num_nodes-2*num_nodes_per_branch, xscale, yscale, -xscale*np.pi*0.84, 0, xtilt, ytilt, sigma, inverse)\n",
     "    X_branch1, flows_branch1, labels_branch1 = directed_sinh(num_nodes_per_branch, xscale, yscale, 0, xscale*np.pi*0.84, xtilt, ytilt, sigma, inverse)\n",
-    "    X_branch2, flows_branch2, labels_branch2 = directed_sin(num_nodes_per_branch, xscale, yscale, 0, xscale*np.pi*2, xtilt, ytilt, sigma, inverse)\n",
+    "    X_branch2, flows_branch2, labels_branch2 = directed_sine(num_nodes_per_branch, xscale, yscale, 0, xscale*np.pi*2, xtilt, ytilt, sigma, inverse)\n",
     "    # concatenate\n",
     "    X = np.concatenate((X_root, X_branch1, X_branch2))\n",
     "    flows = np.concatenate((flows_root, flows_branch1, flows_branch2))\n",
@@ -292,9 +292,9 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def directed_sin_moons(num_nodes=500, xscale=0.5, yscale=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
+    "def directed_sine_moons(num_nodes=500, xscale=0.5, yscale=1, xtilt=0, ytilt=0, sigma=0, inverse=False):\n",
     "    num_nodes_per_moon = num_nodes // 2\n",
-    "    X_moon1, flows_moon1, labels_moon1 = directed_sin(num_nodes_per_moon, xscale, yscale, 0, xscale*np.pi, xtilt, ytilt, sigma, inverse)\n",
+    "    X_moon1, flows_moon1, labels_moon1 = directed_sine(num_nodes_per_moon, xscale, yscale, 0, xscale*np.pi, xtilt, ytilt, sigma, inverse)\n",
     "    X_moon2, flows_moon2, labels_moon2 = X, flows, labels = directed_one_variable_function(\n",
     "        lambda x: np.cos(x / xscale) * yscale + 0.3, \n",
     "        lambda x: -np.sin(x / xscale) / xscale * yscale, \n",
@@ -328,7 +328,7 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_sin_moons()\n",
+    "X, flows, labels = directed_sine_moons()\n",
     "plot_directed_2d(X, flows, labels)"
    ]
   },
@@ -352,7 +352,7 @@
    ],
    "source": [
     "# collapse\n",
-    "X, flows, labels = directed_sin_moons(xtilt=np.pi/4, sigma=0.1)\n",
+    "X, flows, labels = directed_sine_moons(xtilt=np.pi/4, sigma=0.1)\n",
     "plot_directed_3d(X, flows, labels)"
    ]
   }
